--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "name": "Fuckoffcsdn",
   "version": "1.0",
   "description": "Fuckoffcsdn",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "devcxlcn@gmail.com",
+      "strict_min_version": "109.0"
+    }
+  },
   "permissions": ["scripting", "tabs"],
   "host_permissions": [
     "*://www.google.com/*",
